8302325: Wrong comment in java.base/share/native/libjimage/imageFile.hpp